# dog-shelter

./: .gitignore  Cargo.toml  docker-compose.yaml
entity/: Cargo.toml
migration/: Cargo.toml
migration/src/: m20220101_000001_create_table.rs
src/: main.rs  settings.rs
src/api/: v1.rs
src/api/handlers/: hello.rs  login.rs
src/commands/: createadmin.rs  hello.rs  migrate.rs  mod.rs  serve.rs
src/state/: mod.rs
