[package]
name = "dog-shelter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.4.12"
dotenv = "0.15.0"
anyhow = "1.0.79"
serde = {version = "1.0.194",features = ["derive"]}
serde_json = "1.0.110"
config = "0.13.4"
tokio = { version = "1.35.1", features = ["full"] }
axum = {version = "0.7.3"}
tracing = {version = "0.1.40", features = ["log"]}
tracing-log = "0.2.0"
tracing-subscriber = {version = "0.3.18", features = ["registry", "env-filter"] }
tower-http = {version = "0.5.0", features = ["trace"]}
