# workspace = { members = ["entity"] }
[package]
name = "dog-shelter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.4.13"
dotenv = "0.15.0"
anyhow = "1.0.79"
serde = {version = "1.0.195",features = ["derive"]}
serde_json = "1.0.111"
config = "0.13.4"
tokio = { version = "1.35.1", features = ["full"] }
axum = {version = "0.7.3"}
tracing = {version = "0.1.40", features = ["log"]}
tracing-log = "0.2.0"
tracing-subscriber = {version = "0.3.18", features = ["registry", "env-filter"] }
tower-http = {version = "0.5.0", features = ["trace"]}
arc-swap = "1.6.0"
sea-orm ={ version = "0.12.10", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"] }
migration = { path = "migration" }
entity = {path = "entity"}
password-hash = "0.5"
argon2 = "0.5.2"
jsonwebtoken = "9.2.0"
chrono = "0.4.31"
