[package]
name = "entity"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "entity"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0.195", features = ["derive"] }
sea-orm = { version = "0.12.10" }
chrono = { version = "0.4.31" }
